fix: ensure visibility of active workspace tabs

--- a/SuperPins/SuperPins.css
+++ b/SuperPins/SuperPins.css
@@ -292,4 +292,14 @@
             font-size: 16px !important;
         }
     }
+
+
+    /* FIX WORKSPACES BORDERS */
+    vbox.zen-workspace-tabs-section[active="true"] {
+      visibility: visible !important;
+    }
+
+    vbox.zen-workspace-tabs-section[hidden="true"] {
+      visibility: hidden !important;
+    }
 }
